add products from file

--- a/product-service/pom.xml
+++ b/product-service/pom.xml
@@ -51,6 +51,18 @@
             <artifactId>common-library</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>5.2.3</version> <!-- Use the latest version of Apache POI -->
+        </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>5.2.3</version> <!-- Use the latest version of Apache POI OOXML -->
+        </dependency>
+
     </dependencies>
 
     <build>
